--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "framer-motion": "^3.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-easy-emoji": "^1.4.0",
+    "react-headroom": "^3.1.0",
+    "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
